# housecheck

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  HouseCheck_PRD.docx  README.md  deny.toml  fly.toml
.github/workflows/: ci.yml  security.yml  smoke.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: config.rs  geo.rs  main.rs  run.rs  sources.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/scoring/: Cargo.toml
crates/scoring/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
docs/: API.md  CASE-STUDY.md  DEMO-SCRIPT.md  DEPLOY.md  PITCH.md  REVIEW-NOTES.md  ROADMAP.md  SUBMISSION-CHECKLIST.md  TASKS.md  technical-flow.md
docs/mockups/: brand-balenciaga.html  brand-fendi.html  brand-ferrari.html  brand-hermes.html  brand-louboutin.html  brand-offwhite.html  brooklyn-grunge.html  mamdani-70s.html  millennial-hipster.html  nyc-finance.html
docs/superpowers/plans/: 2026-07-21-housecheck-backend-core.md  2026-07-22-housecheck-real-ingest.md
docs/superpowers/specs/: 2026-07-21-housecheck-design.md
