[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "housecheck-api"
path = "src/main.rs"

[dependencies]
model = { path = "../model" }
scoring = { path = "../scoring" }
store = { path = "../store" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[dev-dependencies]
axum-test.workspace = true
