[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "housecheck-api"
path = "src/main.rs"

[dependencies]
model = { path = "../model" }
scoring = { path = "../scoring" }
store = { path = "../store" }
rusqlite.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tower = { version = "0.5", features = ["limit"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[dev-dependencies]
axum-test.workspace = true
